# Broken-Dimensions-game

./: .gitignore  README.md
BD-server/: BD-server.cpp  BD-server.h  CMakeLists.txt
BD-server/include/server/: server.cpp  server.hpp
BD-server/include/sims/: world.cpp  world.hpp
BD-server/include/sims/agents/: actor.cpp  actor.hpp  pawn.cpp  pawn.hpp
Client/: Client.py  main.py
Client/_tmp/: Client.py
Client/pyClient/: Client.py  config.py  main.py  pawn.py  pawnIDs.py  player.py  world.py
server/: connection.py  main.py
server/simulation/: config.py  pawn.py  player.py  world.py
